[package]
name = "lb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-timer = { version = "0.7.4", features = ["tokio"] }
byte-unit = "5.1.4"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
ipnet = "2.9.0"
kanal = "0.1.0-pre8"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive", "serde_derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
tokio-os-timer = "0.1.8"

[profile.release]
opt-level = 3
lto = true
strip = false
debug = false
codegen-units = 1
